k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-deployment
  labels:
    app: api
spec:
  replicas: 3
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: kremlin/ott-api-svc:version-1.0.0
        volumeMounts:
        - mountPath: /data
          name: firebase
          readOnly: true
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: registry-cred
      volumes:
      - name: firebase
        secret:
          optional: false
          secretName: firebase-json
